// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requireConfig should work 1`] = `
{
  "config": {},
  "path": "<pwd>/statoscope.config.js",
}
`;

exports[`requireConfig should work 2`] = `
{
  "config": {},
  "path": "<pwd>/fooooo",
}
`;

exports[`requireConfig should work 3`] = `
{
  "config": {
    "validate": {
      "plugins": [
        [
          "../../../../packages/stats-validator-plugin-webpack",
          "webpack",
        ],
      ],
      "rules": {
        "webpack/restricted-modules": [
          "error",
          [
            /\\\\/src\\\\//,
          ],
        ],
        "webpack/restricted-packages": [
          "error",
          [
            "foo",
          ],
        ],
      },
    },
  },
  "path": "<pwd>/test/fixtures/cli/validate/config.js",
}
`;
